# patchflow

./: .gitignore  CMakeLists.txt  README.md
Resources/ExamplePatches/: .preset_manifest.json  01_waveform_basic.json  02_spectrum_bars.json  03_neon_glow.json  04_plasma_storm.json  05_tunnel_vision.json  06_kaleidoscope.json  07_digital_rain.json  08_bass_nebula.json  09_waveform_spectrum_combo.json  10_particle_field.json  11_feedback_glitch_trails.json  12_fractal_feedback_zoom.json  13_dual_layer_feedback_mix.json  14_kaleido_bloom_tunnel.json  15_audio_displace_lattice.json  16_bloom_feedback_stack.json
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/Audio/: AnalysisSnapshot.h  AudioEngine.cpp  AudioEngine.h
Source/Graph/: Connection.h  GraphCompiler.cpp  GraphCompiler.h  GraphModel.cpp  GraphModel.h  PortTypes.h  RuntimeGraph.cpp  RuntimeGraph.h
Source/Nodes/: NodeBase.cpp  NodeBase.h  NodeRegistry.cpp  NodeRegistry.h
Source/Nodes/Audio/: AudioInputNode.cpp  AudioInputNode.h  BandSplitterNode.cpp  BandSplitterNode.h  BeatDetectorNode.cpp  BeatDetectorNode.h  ChromagramNode.cpp  ChromagramNode.h  EnvelopeFollowerNode.cpp  EnvelopeFollowerNode.h  FFTAnalyzerNode.cpp  FFTAnalyzerNode.h  GainNode.cpp  GainNode.h  SmoothingNode.cpp  SmoothingNode.h  SpectralFeaturesNode.cpp  SpectralFeaturesNode.h
Source/Nodes/Math/: AddNode.cpp  AddNode.h  ClampNode.cpp  ClampNode.h  MapRangeNode.cpp  MapRangeNode.h  MultiplyNode.cpp  MultiplyNode.h
Source/Nodes/Visual/: BlendNode.cpp  BlendNode.h  BloomNode.cpp  BloomNode.h  BlurNode.cpp  BlurNode.h  ChromaticAberrationNode.cpp  ChromaticAberrationNode.h  ColorGradeNode.cpp  ColorGradeNode.h  ColorMapNode.cpp  ColorMapNode.h  DisplaceNode.cpp  DisplaceNode.h  EdgeDetectNode.cpp  EdgeDetectNode.h  FeedbackNode.cpp  FeedbackNode.h  GlitchNode.cpp  GlitchNode.h  GradientNode.cpp  GradientNode.h  KaleidoscopeNode.cpp  KaleidoscopeNode.h  LFONode.cpp  LFONode.h  MirrorNode.cpp  MirrorNode.h  NoiseNode.cpp  NoiseNode.h  OutputCanvasNode.cpp  OutputCanvasNode.h  ParticleNode.cpp  ParticleNode.h  PatternNode.cpp  PatternNode.h  ReactionDiffusionNode.cpp  ReactionDiffusionNode.h  SDFShapeNode.cpp  SDFShapeNode.h  (+16 more)
Source/Rendering/: RenderConfig.h  ShaderUtils.cpp  ShaderUtils.h  VisualCanvas.cpp  VisualCanvas.h
Source/UI/: CableComponent.cpp  CableComponent.h  InspectorPanel.cpp  InspectorPanel.h  NodeComponent.cpp  NodeComponent.h  NodeEditorComponent.cpp  NodeEditorComponent.h  NodePaletteComponent.cpp  NodePaletteComponent.h  PortComponent.cpp  PortComponent.h  Theme.h
